@@ -5,6 +5,7 @@
  * FIX: サムネイル画像の取得をキャンセルするとエラーが発生する場合がある問題の修正
  * FIX: サムネイル画像の読み込み中に画面の更新が遅くなる問題の修正
  * FIX: 壊れたプロフィール画像を取得したり不安定な回線で読み込みを行うと操作不能な状態になることがある問題の修正
+ * FIX: Twitter API から取得したツイートのエンティティ情報が不正な場合の対策を追加 (thx @nyamph_pf!)
 
 ==== Ver 1.1.7(2014/01/16)
  * NEW: ダイレクトメッセージに添付された画像のサムネイル表示に対応
